<resources>
    <string name="app_name">DistributeurMediAminata</string>
    <string name="lblNomMed">Nom médicament : </string>
    <string name="lblQauntRestMed">Médicament restant :</string>
    <string name="btnShowMedGet">Voir médicament restant</string>
    <string name="menu">Menu</string>
    <string name="titleObjet">Distributeur de médicament</string>
    <string name="titleParametre">Paramètre</string>
    <string name="lblMetreMed">Stock médicament: </string>
    <string name="lblDoseMed">Dose médicament : </string>
    <string name="btnParametrePost">Envoyer Quantité et Dose</string>
    <string name="lblPartiePorte">Gestion de la Porte </string>
    <string name="lblVerrouille">Planifier lheure de la fermeture du distributeur</string>
    <string name="lblFreq"> Fréquence : </string>
    <string name="lblPouc">Pourcentage ouvrete : </string>
    <string name="btnPageParam">Page Paramètre</string>
    <string name="lblIP">Adresse IP : </string>
    <string name="lblPort">Port : </string>
    <string name="lblAffichage">Temps Mise à jour</string>
    <string name="btnRaff">Mise à jour</string>
    <string name="lblTitreRaff"> Section Mise de la  page</string>
    <string name="btnVer">Verrouiller </string>
    <string name="btnRetourMain">Retour en arrière</string>
    <string name="btnPeriodique">Heure de Rappelle</string>

    <string name="editHintTempsRaf">1</string>
    <string name="editHintNomMed">Fer</string>
    <string name="editHintShowRestMed"> 50</string>
    <string name="editHintMettreMed"> 20</string>
    <string name="editHintDoseMed"> 1, 2 ou 3</string>
    <string name="editHintOuvFer">nuit/matin</string>
    <string name="editHintPour">50 %</string>
    <string name="editHintFreq">4</string>
    <string name="editHintIP">10.4.129.42</string>
    <string name="editHintPort">8080</string>


</resources>