<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityPageParametre">

    <TextView
        android:id="@+id/lblTitrePageParametre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleParametre"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblMettreMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMetreMed"
        app:layout_constraintBaseline_toBaselineOf="@+id/editQuantiteMed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblVerrouiller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblVerrouille"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnParamePost" />

    <TextView
        android:id="@+id/lblDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDoseMed"
        app:layout_constraintBaseline_toBaselineOf="@+id/editDoseMed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editQuantiteMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editHintMettreMed"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitrePageParametre" />

    <EditText
        android:id="@+id/editDoseMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editHintDoseMed"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editQuantiteMed" />

    <!-- TimePicker pour permettre à l'utilisateur de définir l'heure -->
    <!-- TimePicker pour permettre à l'utilisateur de définir l'heure -->

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="305dp"
        android:layout_height="375dp"
        android:timePickerMode="clock"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblVerrouiller" />

    <Button
        android:id="@+id/btnParamePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnParametrePost"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDoseMed" />

    <Button
        android:id="@+id/btnVerrouiller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVer"

        app:layout_constraintBottom_toTopOf="@+id/btnRetourMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

    <Button
        android:id="@+id/btnRetourMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRetourMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPeriodique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPeriodique"
        app:layout_constraintBottom_toTopOf="@+id/btnVerrouiller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

</androidx.constraintlayout.widget.ConstraintLayout>