<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitrePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleObjet"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblNomMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNomMed"
        app:layout_constraintBaseline_toBaselineOf="@+id/editShowNomMed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblQuantMedRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblQauntRestMed"
        app:layout_constraintBaseline_toBaselineOf="@+id/editShowQuantRest"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editShowNomMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/editHintNomMed"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitrePage" />

    <EditText
        android:id="@+id/editShowQuantRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/editHintShowRestMed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editShowNomMed" />

    <Button
        android:id="@+id/btnShowMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnShowMedGet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editShowQuantRest" />

    <Button
        android:id="@+id/btnPageParam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPageParam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShowMed" />

</androidx.constraintlayout.widget.ConstraintLayout>